<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@+id/homeSampleFragment"
            tools:ignore="UnusedNavigation">


    <fragment android:id="@+id/homeSampleFragment"
              android:name="com.hankkin.jetpack_note.ui.navigation.SampleHomeFragment"
              android:label="@string/title_home"
              tools:layout="@layout/fragment_sample_home">

    </fragment>


    <fragment android:id="@+id/dashBoardSampleFragment"
              android:name="com.hankkin.jetpack_note.ui.navigation.SampleDashboardFragment"
              android:label="@string/title_dashboard"
              tools:layout="@layout/fragment_sample_dashboard"/>

    <fragment android:id="@+id/notificationSampleFragment"
              android:name="com.hankkin.jetpack_note.ui.navigation.SampleNotificationFragment"
              android:label="@string/title_notifications"
              tools:layout="@layout/fragment_sample_notification">
    </fragment>

</navigation>