<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
                                              android:background="@color/white"
                                              android:orientation="vertical"
                                              tools:context=".ui.navigation.fg.SampleHomeFragment">

    <androidx.appcompat.widget.AppCompatImageView
            android:src="@mipmap/bg_jump"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>


    <androidx.appcompat.widget.AppCompatButton
            android:layout_margin="@dimen/dp20"
            android:id="@+id/btn_nav_sample_jump"
            android:gravity="center"
            style="@style/normalTxt"
            android:background="@drawable/btn_theme"
            android:text="@string/navigation_sample_jump"
            android:layout_width="match_parent"
            android:layout_height="40dp"
    />
    <androidx.appcompat.widget.AppCompatButton
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:id="@+id/btn_nav_sample_jump_action"
            android:gravity="center"
            style="@style/normalTxt"
            android:background="@drawable/btn_theme"
            android:text="@string/navigation_sample_jump_action"
            android:layout_width="match_parent"
            android:layout_height="40dp"
    />

    <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:id="@+id/btn_nav_sample_jump_argument_normal"
            android:gravity="center"
            style="@style/normalTxt"
            android:background="@drawable/btn_theme"
            android:text="@string/navigation_sample_jump_arguments_normal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
    />

    <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:id="@+id/btn_nav_sample_jump_argument_bean"
            android:gravity="center"
            style="@style/normalTxt"
            android:background="@drawable/btn_theme"
            android:text="@string/navigation_sample_jump_arguments_bean"
            android:layout_width="match_parent"
            android:layout_height="40dp"
    />

</androidx.appcompat.widget.LinearLayoutCompat>