<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/white"
              tools:context=".ui.livedata.LiveDataFragment">


    <com.google.android.material.card.MaterialCardView
            app:cardElevation="@dimen/dp2"
            app:cardCornerRadius="@dimen/dp2"
            android:layout_margin="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="200dp">

        <LinearLayout
                android:padding="@dimen/dp10"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatTextView
                    android:textStyle="bold"
                    android:text="@string/recommend"
                    style="@style/normalTxt"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <androidx.appcompat.widget.AppCompatTextView
                    android:lineSpacingExtra="@dimen/dp2"
                    style="@style/normalTxt"
                    android:layout_marginTop="@dimen/dp20"
                    android:text="@string/livedata_hint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
            android:layout_marginTop="@dimen/dp20"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <com.google.android.material.button.MaterialButton
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                android:textSize="@dimen/sp16"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10"
                android:id="@+id/btn_observer_data"
                android:text="@string/start_oberver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <com.google.android.material.button.MaterialButton
                android:layout_marginStart="@dimen/dp10"
                android:layout_marginBottom="@dimen/dp10"
                android:textSize="@dimen/sp16"
                android:paddingRight="@dimen/dp10"
                android:paddingLeft="@dimen/dp10"
                android:id="@+id/btn_observer_map"
                android:text="@string/map_transform"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
            app:cardElevation="@dimen/dp2"
            app:cardCornerRadius="@dimen/dp2"
            android:layout_margin="@dimen/dp10"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:padding="@dimen/dp10"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_livedata_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>


</LinearLayout>