<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/ll_life_root"
                android:background="@color/white"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/iv_life"
                        android:src="@mipmap/bg_lifecycles"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"/>



            <com.google.android.material.card.MaterialCardView
                    android:layout_margin="@dimen/dp10"
                    android:id="@+id/cv_life_code"
                    app:cardElevation="@dimen/dp2"
                    app:cardCornerRadius="@dimen/dp2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                <LinearLayout
                        android:layout_margin="@dimen/dp10"
                        android:layout_gravity="center_vertical"
                        android:id="@+id/ll_life_hint"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TextView
                            android:textStyle="bold"
                            android:textColor="@color/black"
                            android:layout_marginLeft="@dimen/dp20"
                            android:text="@string/recommend"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:textColor="@color/black"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="@dimen/dp20"
                            android:layout_marginLeft="@dimen/dp20"
                            android:lineSpacingExtra="@dimen/dp4"
                            android:text="@string/lifecycles_hint"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>

                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

            <TextView
                    android:text="@string/location_msg"
                    android:layout_marginTop="@dimen/dp20"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    style="@style/normalTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:id="@+id/tv_life_location"
                    android:layout_marginTop="@dimen/dp10"
                    android:layout_marginBottom="@dimen/dp20"
                    android:gravity="center"
                    android:layout_gravity="bottom"
                    style="@style/normalTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                    <com.google.android.material.button.MaterialButton
                            android:layout_marginStart="@dimen/dp10"
                            android:layout_marginEnd="@dimen/dp10"
                            android:textSize="@dimen/sp16"
                            android:paddingRight="@dimen/dp10"
                            android:paddingLeft="@dimen/dp10"
                            android:id="@+id/btn_add_obserber"
                            android:text="@string/start_monitor"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>

                    <com.google.android.material.button.MaterialButton
                            android:layout_marginStart="@dimen/dp10"
                            android:layout_marginEnd="@dimen/dp10"
                            android:textSize="@dimen/sp16"
                            android:paddingRight="@dimen/dp10"
                            android:paddingLeft="@dimen/dp10"
                            android:id="@+id/btn_location"
                            android:text="@string/start_location"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"/>


                </LinearLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>

</layout>
